recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:7: error: not found: value shring
    tree(steps-1, length-shrink, angle, shring)
                                        ^Tree:10: error: not found: value shring
    tree(steps-1, length-shrink, angle, shring)
                                        ^