recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if(steps != 0){
    current(steps)
    avance(length)
    droite(angle)
    tree(steps-1, length-shrink, angle, shring)
    gauche(2*angle)
    avance(length)
    tree(steps-1, length-shrink, angle, shring)
    droite(angle)
    recule(length)
  }
  
}